force-app/main/default/objects/Azure_OpenAI_Credentials__c/Azure_OpenAI_Credentials__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Protected custom settings for storing Azure OpenAI API credentials and configuration. Use hierarchy type to allow org-wide, profile, or user-level overrides.</description>
    <label>Azure OpenAI Credentials</label>
</CustomObject>