force-app/main/default/objects/Azure_OpenAI_Credentials__c/fields/API_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>API_Endpoint__c</fullName>
    <description>Full Azure OpenAI endpoint URL including deployment name and API version (e.g., https://YOUR-RESOURCE.cognitiveservices.azure.com/openai/deployments/YOUR-DEPLOYMENT/chat/completions?api-version=2024-12-01-preview)</description>
    <label>API Endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>