force-app/main/default/objects/Azure_OpenAI_Credentials__c/fields/Deployment_Name__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Name__c</fullName>
    <description>Azure OpenAI deployment name (e.g., gpt-4o-for-coding)</description>
    <label>Deployment Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>