force-app/main/default/objects/Azure_OpenAI_Credentials__c/fields/Max_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Max_Tokens__c</fullName>
    <defaultValue>4096</defaultValue>
    <description>Maximum tokens for Azure OpenAI response (default: 4096)</description>
    <label>Max Tokens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>