force-app/main/default/objects/Azure_OpenAI_Credentials__c/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <defaultValue>0.7</defaultValue>
    <description>Temperature for response variability (0-2, default: 0.7)</description>
    <label>Temperature</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>